[tool.poetry]
name = "tg-engine"
version = "0.1.0"
description = ""
authors = ["vaclav"]
readme = "README.md"
packages = [{include = "tg_engine"}]

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.6.0"
sqlalchemy = "^1.4.44"
psycopg2-binary = "^2.9.5"
alembic = "^1.8.1"
pydantic = "^1.10.2"
gunicorn = "^20.1.0"
uvicorn = "^0.20.0"
bs4 = "^0.0.1"
lxml = "^4.9.1"
python-telegram-bot = {git = "https://github.com/python-telegram-bot/python-telegram-bot.git"}
apscheduler = "^3.9.1.post1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
